added test for sign out and changed sign-in to sign_in

--- a/views/sign_up.erb
+++ b/views/sign_up.erb
@@ -1,6 +1,7 @@
-<a href="/sign-in">Sign In</a>
+<a href="/sign_in">Sign In</a>
+<br>
 <a href="/">Home</a>
-<form action="/sign-up" method="post">
+<form action="/sign_up" method="post">
   <label for="name">
     Name
     <input type="text" name="name">
