--- a/views/sign_in.erb
+++ b/views/sign_in.erb
@@ -1,6 +1,6 @@
 <a href="/">Home</a>
 <br>
-<form action="/sign_in" method="post">
+<form action="/sign-in" method="post">
   <label for="username">
     Username
     <input type="text" name="username">
@@ -14,4 +14,4 @@
   <input type="submit" value="Submit">
 </form>
 <br>
-Not Registered? <a href="/sign_up">Sign Up</a>
+Not Registered? <a href="/sign-up">Sign Up</a>
