--- a/views/index.erb
+++ b/views/index.erb
@@ -2,13 +2,9 @@ Makers Air B'n'G
 <br>
 <%if @username%>
   Hi, <%= @username %>!<br>
-  <a href="./sign_out">Sign out</a>
+  <a href="./sign-out">Sign out</a>
 <% else %>
-  <a href="./sign_in">Sign in</a>
+  <a href="./sign-in">Sign in</a>
   <br>
-  <a href="./sign_up">Sign up</a>
-
+  <a href="./sign-up">Sign up</a>
 <% end %>
-
-
-
