Started a space page, created application controller

--- a/app/views/spaces.erb
+++ b/app/views/spaces.erb
@@ -1,3 +1,5 @@
+<a href="/">List a space</a>
+
 <form action="/spaces" method="post">
 
 <label for="from">Available from: 
@@ -10,3 +12,14 @@
 
 <input type="submit" value="List Spaces"> 
 </form>
+
+<ul>
+  <li>Test space</li>
+  <li>Test space</li>
+  <li>Test space</li>
+  <li>Test space</li>
+  <li>Test space</li>
+  <li>Test space</li>
+  <li>Test space</li>
+  <li>Test space</li>
+</ul>
