--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -1,5 +1,3 @@
-<a href="/sign-in">Sign In</a>
-<br>
 <a href="/">Home</a>
 <form action="/sign-up" method="post">
   <label for="name">
@@ -20,3 +18,5 @@
   </label><br>
   <input type="submit" value="Submit">
 </form>
+<br>
+Already registered? <a href="/sign-in">Sign In</a>
