Added requests page, passing tests - GREEN

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,8 +3,13 @@ Makers Air B'n'G
 <%if @username%>
   Hi, <%= @username %>!<br>
   <a href="./sign-out">Sign out</a>
+  <br>
+  <a href="./requests">Requests</a>
 <% else %>
   <a href="./sign-in">Sign in</a>
   <br>
   <a href="./sign-up">Sign up</a>
 <% end %>
+
+
+
