--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -10,7 +10,7 @@
   </label><br>
   <label for="password">
     Password
-    <input type="password">
+    <input type="password" name="password">
   </label><br>
   <label for="confirm-password">
     Confirm Password
