--- a/app/views/requests.erb
+++ b/app/views/requests.erb
@@ -1,5 +1,72 @@
-<a href="/">Home</a>
-<br>
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Makers Air B'n'B</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+  <link href="style.css" rel="stylesheet">
+</head>
+
+<body>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#"> <img src="img/default.png" height="75" width="75"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ms-auto">
+
+<%if @username%>
+     <li class="nav-item">
+       <a class="nav-link" href="/">Home</a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="/spaces">Spaces</a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="/requests">Requests</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/sign-out">Sign out</a>
+     </li>
+     <li class="nav-item">
+        <a class="nav-link" href="#">
+            Hi, <%= @username %>!<br>
+        </a>
+      </li>
+<% else %>
+       <li class="nav-item">
+       <a class="nav-link" href="/">Home</a>
+      </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/sign-up">Sign up</a>
+        </li>
+
+        <li class="nav-item">
+         <a class="nav-link" href="/sign-in">Sign in</a>
+       </li>
+
+        </ul>
+<% end %>
+      </div>
+      </nav>
+    </ul>
+  </div>
+</nav>
 
 Requests I have made:
 
@@ -14,9 +81,14 @@ Requests I have made:
 
 Requests I have received: 
 
-<ul>
-  <li>Test Request</li>
-  <li>Test Request</li>
-  <li>Test Request</li>
-  <li>Test Request</li>
-</ul>
+  <ul>
+    <li>Test Request</li>
+    <li>Test Request</li>
+    <li>Test Request</li>
+    <li>Test Request</li>
+    </ul>
+
+
+</body>
+
+</html>
