--- a/app/views/spaces.erb
+++ b/app/views/spaces.erb
@@ -1,25 +1,86 @@
-<a href="/">List a space</a>
+<!DOCTYPE html>
+<html lang="en">
 
-<form action="/spaces" method="post">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Makers Air B'n'B</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+  <link href="style.css" rel="stylesheet">
+</head>
 
-<label for="from">Available from: 
-<input type="date" name="from"> 
-</label>
+<body>
 
-<label for="to">Available to: 
-<input type="date" name="to"> 
-</label>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#"> <img src="img/default.png" height="75" width="75"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-<input type="submit" value="List Spaces"> 
-</form>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ms-auto">
 
-<ul>
-  <li>Test space</li>
-  <li>Test space</li>
-  <li>Test space</li>
-  <li>Test space</li>
-  <li>Test space</li>
-  <li>Test space</li>
-  <li>Test space</li>
-  <li>Test space</li>
-</ul>
+<%if @username%>
+     <li class="nav-item">
+       <a class="nav-link" href="/">Home</a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="/requests">Requests</a>
+      </li>
+     <li class="nav-item">
+        <a class="nav-link" href="/list-a-space">List a space</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/sign-out">Sign out</a>
+     </li>
+     <li class="nav-item">
+        <a class="nav-link" href="#">
+         <%if @username%>
+            Hi, <%= @username %>!<br>
+        </a>
+        <% end %>
+      </li>
+  <% else %>
+       <li class="nav-item">
+       <a class="nav-link" href="/">Home</a>
+      </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/sign-up">Sign up</a>
+        </li>
+
+        <li class="nav-item">
+         <a class="nav-link" href="/sign-in">Sign in</a>
+       </li>
+
+        </ul>
+    <% end %>
+      </div>
+      </nav>
+    </ul>
+  </div>
+</nav>
+
+<div class="col-md-1">
+  <div class="row-md-1">
+
+   <form action="/spaces" method="post">
+    <label for="from">Available from: 
+      <input type="date" name="from"> 
+       </label>
+      <label for="to">Available to: 
+        <input type="date" name="to"> 
+        </label>
+      <input type="submit" value="List Spaces"> 
+      </form>
+  </div>
+</div>
+
+</body>
+
+</html>
