--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -26,6 +26,18 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ms-auto">
 
+<div id="slides" class="carousel slide" data-ride="carousel"> 
+  <ul class="carousel-indicators">
+    <li data-target="#slides" data-slide-to="0" class="active"> </li>
+  </ul>
+
+<div class="carousel-inner">
+    <div class="carousel-item">
+    <img src="img/background.png">
+    </div>
+</div>
+</div>
+
 <%if @username%>
      <li class="nav-item">
        <a class="nav-link" href="/spaces">Spaces</a>
