--- a/app/views/spaces.erb
+++ b/app/views/spaces.erb
@@ -1,25 +1,20 @@
-<a href="/">List a space</a>
+<a href="/list-a-space">List a space</a>
 
 <form action="/spaces" method="post">
 
-<label for="from">Available from: 
-<input type="date" name="from"> 
-</label>
-
-<label for="to">Available to: 
-<input type="date" name="to"> 
+<label for="from">Night to stay 
+  <input type="date" name="night" required> 
 </label>
 
 <input type="submit" value="List Spaces"> 
 </form>
-
 <ul>
-  <li>Test space</li>
-  <li>Test space</li>
-  <li>Test space</li>
-  <li>Test space</li>
-  <li>Test space</li>
-  <li>Test space</li>
-  <li>Test space</li>
-  <li>Test space</li>
-</ul>
+<%if @result%>
+  <% @result.each do |k|%>
+    <li>Name: <%= "#{k.name}" %></li>
+    <li>Description: <%= "#{k.description}" %></li>
+    <li>Price: <%= "#{k.price}" %></li>
+    <br>
+  <%end%>
+<%end%>
+<ul>
