something broke, now it doesn't

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,7 @@
 Makers Air B'n'G
 <br>
-<%if @username%>
-  Hi, <%= @username %>!<br>
+<%if @user%>
+  Hi, <%= @user.name %>!<br>
   <a href="/sign-out">Sign out</a>
   <br>
   <a href="/list-a-space">List a space</a>
