--- a/app/views/spaces.erb
+++ b/app/views/spaces.erb
@@ -16,7 +16,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#"> <img src="img/default.png" height="75" width="75"></a>
+  <a class="navbar-brand" href="#"> <img src="img/cover.png" height="75" width="75"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
